Prevent tile content selection
When uncovering a tile in Firefox, its content was automatically
selected and appeared blue.

--- a/src/app/game-tile/game-tile.component.scss
+++ b/src/app/game-tile/game-tile.component.scss
@@ -16,6 +16,7 @@
   border-bottom-color: #808080;
   border-right-color: #808080;
   background-color: #C0C0C0;
+  user-select: none;
 }
 
 .uncovered {
